fixes for Misc and jdk 11