@@ -9,13 +9,18 @@ version = '2.0.0'
 
 description = """Echo Park Labs' version of the ESRI Geometry API for Java"""
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.9
+targetCompatibility = 1.9
 // https://stackoverflow.com/questions/18689365/how-to-add-xlintunchecked-to-my-android-gradle-based-project
 // https://stackoverflow.com/a/34452265/445372
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    options.compilerArgs.addAll([
+            "-Xlint:unchecked",
+            "-Xlint:deprecation",
+            "--add-exports",
+            "java.base/jdk.internal.misc=ALL-UNNAMED"
+    ])
 }
 
 repositories {
@@ -25,7 +30,7 @@ repositories {
 dependencies {
     compile group: 'org.json', name: 'json', version:'20170516'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.6.2'
-    compile files('/usr/local/lib/jproj.jar')
+    compile files('/usr/local/lib/proj.jar')
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.openjdk.jol', name: 'jol-core', version: '0.1'
 }
@@ -34,6 +39,9 @@ test {
     testLogging {
         exceptionFormat = 'full'
     }
+
+    // https://www.youtube.com/watch?v=4HG0YQVy8UM&feature=youtu.be
+    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
 }
 
 task copyToLib(type: Copy) {
